Phase 2.5 PR 2: submit endpoint for user-submitted names
Add POST /submissions so an authenticated user can enqueue a candidate
name into the PENDING moderation queue. Backend only; the browse-page UI
is a later slice.

- NameSubmissionService: reuse QualityGateService as the anti-abuse content
  screen (400 on fail), soft duplicate checks (409 for an existing live
  name in any status, or an existing PENDING submission), with the
  uq_submissions_pending partial index as the race-safe backstop
  (catch-and-remap of DataIntegrityViolationException -> 409, mirroring
  NameReportService.saveNew).
- NameSubmissionController: POST /submissions, @ResponseStatus(CREATED),
  @PreAuthorize("isAuthenticated()"); bounds blank/over-128-char
  displayName to 400 before the DB (same reasoning as
  NameReportController.MAX_REASON_LENGTH).
- Query methods: NameSubmissionRepository.existsBy...AndStatus and
  NameRepository.existsByNormalizedNameAndRaceAndGender.
- WebSecurityConfig: register POST /submissions in the .authenticated()
  block next to /reports.
- Tests: NameSubmissionServiceTest (Mockito) and NameSubmissionControllerTest
  (@WebMvcTest), plus ROADMAP (tick PR 2) and DECISIONS updates.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>